--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="bottomRight" style="width: 40px; height: 40px; position:absolute; right: 0; bottom: 0;"></div>
 <div id="bottomLeft" style="width: 40px; height: 40px; position:absolute; bottom:0;"></div>
   <div class="advice" id="advice">
-    <div onclick="clearInterval(a);" class="closeBar" id="closeBar1" data-closeAnimation="elem.parentElement.style.transitionProperty = `opacity`; elem.parentElement.style.transitionDuration = `0.5s` ;elem.parentElement.style.opacity = `0`; document.body.style.overflow=``; document.body.style.overflowX = `hidden`; setTimeout(()=>elem.parentElement.style.display=`none`, 500)"></div>
+    <div onclick="clearInterval(a);" class="closeBar" id="closeBar1" data-closeAnimation="elem.parentElement.style.transitionProperty = `opacity`; elem.parentElement.style.transitionDuration = `0.5s` ;elem.parentElement.style.opacity = `0`; document.documentElement.style.overflow=``; document.body.style.overflowX = `hidden`; setTimeout(()=>elem.parentElement.style.display=`none`, 500)"></div>
     <h1>Подсказки</h1>
 
       <div class="slider">
